--- a/_config.yml
+++ b/_config.yml
@@ -7,9 +7,9 @@ version: 2
 
 # Personal info
 name: Brandon Horsley
-title: Senior Network System Administrator
-email: brett.h@email.co.uk
-website: www.github.com/sproogen/resume-theme
+title: Senior Project Manager
+email: brandon082084@gmail.com
+website: https://brh1984.github.io/
 
 # Dark Mode (true/false/never)
 darkmode: false
