--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ github_username:  sproogen
 # facebook_username: jekyll
 # flickr_username: jekyll
 instagram_username: jameswgrant
-linkedin_username: jameswgrant
+linkedin_username: brandon082084
 # xing_username: jekyll
 # pinterest_username: jekyll
 youtube_username: globalmtb
