--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ github_username:  brh1984
 # dribbble_username: jekyll
 # facebook_username: jekyll
 # flickr_username: jekyll
-linkedin_username: brandon082084@gmail.com
+linkedin_username: brandon082084
 # xing_username: jekyll
 # pinterest_username: jekyll
 # googleplus_username: +jekyll
