--- a/_config.yml
+++ b/_config.yml
@@ -45,7 +45,7 @@ additional_links:
 # about_title: About Me
 about_profile_image: images/profile.JPG
 about_content: | # this will include new lines to allow paragraphs
-  Hi, my name is Brandon Horsley, and I'm a senior project manager at Siemens Gamesa Renewable Energy. As well as project management I also have experience engineering, process improvement, and training. I've worked in project management in the energy sector for 11 years, gaining teamwork and leadership skills.
+  Hi, my name is Brandon Horsley, and I'm a senior project manager at Siemens Gamesa Renewable Energy. I have experience in engineering, process improvement, and training. I've worked in project management in the energy sector for 11 years, gaining teamwork and leadership skills.  In addition to my professional career, I've been happily married for 6 years and have two wonderful kids with a third on the way!
 
   I am most skilled in: <mark>AWS</mark> and <mark>Eating Pizza</mark>
 
