--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ version: 2
 name: Brandon Horsley
 title: Senior Project Manager
 email: brandon082084@gmail.com
-website: https://brh1984.github.io/
+# website: https://brh1984.github.io/
 
 # Dark Mode (true/false/never)
 darkmode: false
