--- a/_config.yml
+++ b/_config.yml
@@ -9,6 +9,9 @@ version: 2
 name: Brandon Horsley
 title: Senior Project Manager
 email: brandon082084@gmail.com
+Phone: 713-923-0036
+Located: Orlando, Florida
+Resume: 
 # website: https://brh1984.github.io/
 
 # Dark Mode (true/false/never)
