--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ darkmode: false
 # Social links
 linkedin_username: brandon082084
 facebook_username: brandon.horsley.56
-github_username:  brh1984
+# github_username:  brh1984
 # stackoverflow_username: "00000001"
 # dribbble_username: jekyll
 # flickr_username: jekyll
