--- a/_config.yml
+++ b/_config.yml
@@ -9,9 +9,7 @@ version: 2
 name: Brandon Horsley
 title: Senior Project Manager
 email: brandon082084@gmail.com
-Phone: 713-923-0036
-Located: Orlando, Florida
-Resume: 
+phone: 713-923-0036 
 # website: https://brh1984.github.io/
 
 # Dark Mode (true/false/never)
