--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ phone: 713-923-0036
 darkmode: false
 
 # Social links
-linkedin_username: brandon082084
+linkedin_username: brandonrhorsley
 facebook_username: brandon.horsley.56
 # github_username:  brh1984
 # stackoverflow_username: "00000001"
