--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site
 repository: brh1984/resume_template
-favicon: images/favicon.jpeg
+favicon: images/favicon.ico
 
 # Content configuration version
 version: 2
