--- a/_config.yml
+++ b/_config.yml
@@ -84,6 +84,7 @@ content:
         description: | # this will include new lines to allow paragraphs
             Every company needs its networks properly administered and The Boring Compay is no exception. Digging holes is hard and I play my part making sure the whole company stays connected. I lead a team of 5 people and enjoy driving the company to try new technologies.
 
+      - layout: left
         title: The Boring Company
         link: boringcompany.com
         # link_text: boringcompany.com
@@ -93,7 +94,8 @@ content:
           Solving 21st century problems by diging holes and making game changing products like the *not a flamethrower*
         description: | # this will include new lines to allow paragraphs
             Every company needs its networks properly administered and The Boring Compay is no exception. Digging holes is hard and I play my part making sure the whole company stays connected. I lead a team of 5 people and enjoy driving the company to try new technologies.
-            
+      
+      - layout: left
         title: The Boring Company
         link: boringcompany.com
         # link_text: boringcompany.com
@@ -103,7 +105,8 @@ content:
           Solving 21st century problems by diging holes and making game changing products like the *not a flamethrower*
         description: | # this will include new lines to allow paragraphs
             Every company needs its networks properly administered and The Boring Compay is no exception. Digging holes is hard and I play my part making sure the whole company stays connected. I lead a team of 5 people and enjoy driving the company to try new technologies.   
-           
+          
+      - layout: left    
         title: The Boring Company
         link: boringcompany.com
         # link_text: boringcompany.com
