--- a/_config.yml
+++ b/_config.yml
@@ -80,9 +80,17 @@ content:
         sub_title: Senior Project Manager, Americas Region
         caption: 2017 - Present
         quote: >
-          Solving 21st century problems by diging holes and making game changing products like the *not a flamethrower*
+            At Siemens Gamesa, we're constantly working on better solutions for renewables – to provide cleaner, more reliable and more affordable energy to society, and to create lasting value for all stakeholders.
         description: | # this will include new lines to allow paragraphs
-            As Senior Project Manager I am responsible for around 30-40% of our project portfolio.  I have a strong focus on collaboration with stakholders from multiple departments in multiple regions, to ensure project success and share best practices.  My last project included developing and managing the testing and implementation of a new web portal and software to streamline our service history tracking across a fleet of 3000 turbines.  Through process improvements I've been able to reduce preventive maintenance downtime by 36% in North America, and warehouse processing time by 50% in Latin America.
+            As Senior Project Manager I am responsible for multiple large projects in our portfolio.  I have a strong focus on collaboration with stakholders from multiple departments in multiple regions, to ensure project success and best practice sharing.
+            
+            	Manage 30-40% of project portfolio, worth ~$10 Million in positive P&L impact per year throughout North and South America.
+            	Develop strong collaborative relationships with stakeholders across other departments and other countries to achieve project targets and overall business objectives.
+            	Responsible for evaluating project improvement ideas, business case development, and managing the execution of project plans across global & regional functions. 
+            	Managed the development, testing, and implementation of web portal and software to streamline service history recording and tracking across fleet of 3000+ turbines in North America.
+            	Develop and manage detailed scheduling, financial planning, risk mitigation, and stakeholder communication for large regional projects.
+            	Responsible for preparing and presenting project review updates to business executives and global leadership teams. 
+            	Reduced preventive maintenance downtime by 36% in North America, and warehouse processing time by 50% in Latin America.
 
       - layout: left
         title: The Boring Company
