--- a/_config.yml
+++ b/_config.yml
@@ -84,6 +84,11 @@ content:
         description: | # this will include new lines to allow paragraphs
             As Senior Project Manager I am responsible for multiple large projects in our portfolio.  I have a strong focus on collaboration with stakholders from multiple departments in multiple regions, to ensure project success and best practice sharing.
             
+            <ul>
+            <li>Example 1</li>
+            <li>Example 2</li>
+            <li>Example 3</li>
+            </ul>
             &#x2022; Manage 30-40% of project portfolio, worth ~$10 Million in positive P&L impact per year throughout North and South America.
             	Develop strong collaborative relationships with stakeholders across other departments and other countries to achieve project targets and overall business objectives.
             	Responsible for evaluating project improvement ideas, business case development, and managing the execution of project plans across global & regional functions. 
