--- a/_config.yml
+++ b/_config.yml
@@ -82,16 +82,16 @@ content:
         quote: >
             At Siemens Gamesa, we're constantly working on better solutions for renewables – to provide cleaner, more reliable and more affordable energy to society, and to create lasting value for all stakeholders.
         description: | # this will include new lines to allow paragraphs
-            As Senior Project Manager I am responsible for multiple large projects in our portfolio at a time.  I have a strong focus on collaboration with stakholders from multiple departments in multiple regions, to ensure project success and best practice sharing.
+            <b>As Senior Project Manager I am responsible for multiple large projects in our portfolio at a time.  I have a strong focus on collaboration with stakholders from multiple departments in multiple regions, to ensure project success and best practice sharing.</b>
             
             <ul>
-            <li>Manage 30-40% of project portfolio, worth ~$10 Million in positive P&L impact per year throughout North and South America. 1</li>
-            <li>Develop strong collaborative relationships with stakeholders across other departments and other countries to achieve project targets and overall business objectives. 2</li>
-            <li>Responsible for evaluating project improvement ideas, business case development, and managing the execution of project plans across global & regional functions.  3</li>
-            <li>Managed the development, testing, and implementation of web portal and software to streamline service history recording and tracking across fleet of 3000+ turbines in North America. 4</li>
-            <li>Develop and manage detailed scheduling, financial planning, risk mitigation, and stakeholder communication for large regional projects. 5</li>
-            <li>Responsible for preparing and presenting project review updates to business executives and global leadership teams. 6</li>
-            <li>Reduced preventive maintenance downtime by 36% in North America, and warehouse processing time by 50% in Latin America. 7</li>
+            <li>Manage 30-40% of project portfolio, worth ~$10 Million in positive P&L impact per year throughout North and South America.</li>
+            <li>Develop strong collaborative relationships with stakeholders across other departments and other countries to achieve project targets and overall business objectives.</li>
+            <li>Responsible for evaluating project improvement ideas, business case development, and managing the execution of project plans across global & regional functions.</li>
+            <li>Managed the development, testing, and implementation of web portal and software to streamline service history recording and tracking across fleet of 3000+ turbines in North America.</li>
+            <li>Develop and manage detailed scheduling, financial planning, risk mitigation, and stakeholder communication for large regional projects.</li>
+            <li>Responsible for preparing and presenting project review updates to business executives and global leadership teams.</li>
+            <li>Reduced preventive maintenance downtime by 36% in North America, and warehouse processing time by 50% in Latin America.</li>
             </ul>
 
       - layout: left
