--- a/_config.yml
+++ b/_config.yml
@@ -84,6 +84,7 @@ content:
         description: | # this will include new lines to allow paragraphs
             <b>As Senior Project Manager I am responsible for multiple large projects in our portfolio at a time.  I have a strong focus on collaboration with stakholders from multiple departments in multiple regions, to ensure project success and best practice sharing.</b>
             
+            <font size="-1">
             <ul>
             <li>Manage 30-40% of project portfolio, worth ~$10 Million in positive P&L impact per year throughout North and South America.</li>
             <li>Develop strong collaborative relationships with stakeholders across other departments and other countries to achieve project targets and overall business objectives.</li>
@@ -93,6 +94,7 @@ content:
             <li>Responsible for preparing and presenting project review updates to business executives and global leadership teams.</li>
             <li>Reduced preventive maintenance downtime by 36% in North America, and warehouse processing time by 50% in Latin America.</li>
             </ul>
+            </font>
 
       - layout: left
         title: The Boring Company
