--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ content:
         quote: >
             At Siemens Gamesa, we're constantly working on better solutions for renewables – to provide cleaner, more reliable and more affordable energy to society, and to create lasting value for all stakeholders.
         description: | # this will include new lines to allow paragraphs
-            <b>As Senior Project Manager I am responsible for multiple large projects in our portfolio at a time.  I have a strong focus on collaboration with stakholders from multiple departments in multiple regions, to ensure project success and best practice sharing.</b>
+            As Senior Project Manager I am responsible for multiple large projects in our portfolio at a time.  I have a strong focus on collaboration with stakholders from multiple departments in multiple regions, to ensure project success and best practice sharing.
             
             <font size="-1">
             <ul>
