--- a/_config.yml
+++ b/_config.yml
@@ -86,12 +86,12 @@ content:
             
             <ul>
             <li><font size="-1">Manage 30-40% of project portfolio, worth ~$10 Million in positive P&L impact per year throughout North and South America.</font></li>
-            <li>Develop strong collaborative relationships with stakeholders across other departments and other countries to achieve project targets and overall business objectives.</li>
-            <li>Responsible for evaluating project improvement ideas, business case development, and managing the execution of project plans across global & regional functions.</li>
-            <li>Managed the development, testing, and implementation of web portal and software to streamline service history recording and tracking across fleet of 3000+ turbines in North America.</li>
-            <li>Develop and manage detailed scheduling, financial planning, risk mitigation, and stakeholder communication for large regional projects.</li>
-            <li>Responsible for preparing and presenting project review updates to business executives and global leadership teams.</li>
-            <li>Reduced preventive maintenance downtime by 36% in North America, and warehouse processing time by 50% in Latin America.</li>
+            <li><font size="-1">Develop strong collaborative relationships with stakeholders across other departments and other countries to achieve project targets and overall business objectives.</font></li>
+            <li><font size="-1">Responsible for evaluating project improvement ideas, business case development, and managing the execution of project plans across global & regional functions.</font></li>
+            <li><font size="-1">Managed the development, testing, and implementation of web portal and software to streamline service history recording and tracking across fleet of 3000+ turbines in North America.</font></li>
+            <li><font size="-1">Develop and manage detailed scheduling, financial planning, risk mitigation, and stakeholder communication for large regional projects.</font></li>
+            <li><font size="-1">Responsible for preparing and presenting project review updates to business executives and global leadership teams.</font></li>
+            <li><font size="-1">Reduced preventive maintenance downtime by 36% in North America, and warehouse processing time by 50% in Latin America.</font></li>
             </ul>
 
       - layout: left
