--- a/_config.yml
+++ b/_config.yml
@@ -79,7 +79,8 @@ content:
         link_text: siemensgamesa.com
         sub_title: Senior Project Manager, Americas Region
         caption: 2017 - Present
-        quote: >       #At Siemens Gamesa, we're constantly working on better solutions for renewables – to provide cleaner, more reliable and more affordable energy to society, and to create lasting value for all stakeholders.
+        quote: | #At Siemens Gamesa, we're constantly working on better solutions for renewables – to provide cleaner, more reliable and more affordable energy to society, and to create lasting value for all stakeholders.
+            <p style="font-style: italic;">As Senior Project Manager I am responsible for multiple large projects in our portfolio at a time.  I have a strong focus on collaboration with stakholders from multiple departments in multiple regions, to ensure project success and best practice sharing.</p>
         description: | # this will include new lines to allow paragraphs
             <p style="font-style: italic;">As Senior Project Manager I am responsible for multiple large projects in our portfolio at a time.  I have a strong focus on collaboration with stakholders from multiple departments in multiple regions, to ensure project success and best practice sharing.</p>
             
