--- a/_config.yml
+++ b/_config.yml
@@ -93,8 +93,7 @@ content:
             </ul>
 
       - layout: top-middle
-        title: <hr> 
-               Siemens Energy, Inc
+        title: Siemens Energy, Inc
         link: https://www.siemens-energy.com/us/en.html?gclid=Cj0KCQjwidSWBhDdARIsAIoTVb23wRe8QoKQWdkBxCfg6Q_FEQHNQmGvBPMk4KXSgtOXEQXv1Pc9wsQaAj1EEALw_wcB
         link_text: siemens-energy.com
         sub_title: Senior Project Manager, Americas Region
