--- a/_config.yml
+++ b/_config.yml
@@ -51,7 +51,7 @@ about_content: | # this will include new lines to allow paragraphs
   I am most skilled in: <mark>Project Managment</mark>, <mark>Process Improvement</mark>, and <mark>Project Collaboration</mark>
 
 content:
-  - title: Fun Projects # Title for the section
+  - title: Personal Projects # Title for the section
     layout: list # Type of content section (list/text)
     content:
       - layout: top-middle
@@ -143,15 +143,13 @@ content:
     layout: list # Type of content section (list/text)
     content:
       - layout: top-middle
-        title: Harvard University
+        title: Brigham Young University
         caption: 2010 - 2013
-        sub_title: BSc Computer Science
+        sub_title: BSc Mechanical Engineering
         quote: >
-          Established in 1636, Harvard is the oldest higher education institution in the United States, and is widely regarded in terms of its influence, reputation, and academic pedigree as a leading university in not just the US but also the world.
+          A BYU education should be spiritually strengthening, intellectually enlarging, and character building, leading to lifelong learning and service. -The Aims of a BYU Education-
         description: | # this will include new lines to allow paragraphs
-          During my time at Harvard I learnt most of my key skills that have I have taken through my career such as teamwork and working to tight deadlines. I thouroughly enjoyed my time as university and learnt a lot about a healthy work life balance.
-
-          I spent a lot of my free time as a committee member of the *Harvard Mountaineering Club* taking on roles such as *Trip Secretary* and *Vice-President*.
+          During my time at BYU I focused not only on my major in engineering, but in taking other classes that would make me well rounded.  Public speaking, Personal Finance, and World History classes were a few.  I joined one of my professors over a summer to assist in graduate research on the propogation of gravity waves in the ocean and atomosphere.  I was a member of Engineers without boarders, traveling to Peru to install a wind turbine in a small village.  I was able to do an internship with Atlas Copco in Nanjing, China.  Finally, I graduated magna cum laude in 2011 when I was recruited by Siemens Energy. 
 
   - title: A Little More About Me
     layout: text
